# NVSE-VR

./: .gitignore  CMakeLists.txt  README.md  exports.def
include/common/: ICriticalSection.h  IDebugLog.h  IErrors.h  ITypes.h
include/nvse_vr/: camera_manager.h  nvse_compat.h  render_hook_manager.h  vr_manager.h  vulkan_fwd.h
src/: camera_manager.cc  id_debug_log.cc  main.cc  render_hook_manager.cc  vr_manager.cc
